2005-08-10  Adele Peterson  <adele@apple.com>

        Bumping version to 420+

        * Info.plist:

2005-08-08  Darin Adler  <darin@apple.com>

        Reviewed by John Sullivan.

        - fixed <rdar://problem/3996324> REGRESSION (1.2-2.0): scroll bars sometimes not updated properly (with >40 duplicate reports!)
          also http://bugzilla.opendarwin.org/show_bug.cgi?id=3416

        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView _recursiveDisplayRectIfNeededIgnoringOpacity:isVisibleRect:rectIsVisibleRectForView:topView:]):
        Propagate dirty rects after doing a layout, since a layout can create new dirty rects.

2005-08-05  Adele Peterson  <adele@apple.com>

        Reviewed by Darin.

        * WebKit.xcodeproj/project.pbxproj: Unchecked 'statics are thread safe' option.

2005-08-04  Justin Garcia  <justin.garcia@apple.com>

        Reviewed by darin
        
        Fix for:
        <rdar://problem/3167884> Shockwave: 3D sprites rendered in OpenGL draw over the browser (3447)
        also as <http://bugzilla.opendarwin.org/show_bug.cgi?id=3447>
        
        The WindowRef created by -[NSWindow windowRef] has a QuickDraw GrafPort that covers 
        the entire window frame (or structure region in Carbon parlance) rather then just the window content.
        
        We filed this as an NSWindow bug <rdar://problem/4201099>

        To work around, we modify the CGrafPort to only cover the content area before we let the plug-in draw.

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView fixWindowPort]):
        (-[WebBaseNetscapePluginView saveAndSetPortStateForUpdate:]):

2005-08-03  John Sullivan  <sullivan@apple.com>

        Reviewed by Geoff Garen.
        
        - fixed <rdar://problem/3918675> Remove code to replace authentication dialog 
        with a subclass when out of localization freeze

        * Panels.subproj/WebAuthenticationPanel.h: