@@ -1,3 +1,13 @@
+2005-08-11  Beth Dakin  <bdakin@apple.com>
+
+        Reviewed by Vicki
+
+	This is a fix for <rdar://problem/4141161> REGRESSION (Tiger): WebKit does not display in composited Carbon windows.
+	I basically did what Troy suggests in his bug comments, and everything seems to work fine!
+
+        * Carbon.subproj/HIViewAdapter.m:
+        (-[HIViewAdapter setNeedsDisplayInRect:]):
+
 2005-08-10  Adele Peterson  <adele@apple.com>
 
         Bumping version to 420+
